--- a/templates/zerver/app/navbar.html
+++ b/templates/zerver/app/navbar.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 </div>
-<div class="header">
+<div class="header"{% if is_iframe %} style="display: none;"{% endif %}>
     <nav class="header-main rightside-userlist" id="top_navbar">
         <div class="column-left">
             <a class="brand no-style" href="#">
