--- a/templates/zerver/index.html
+++ b/templates/zerver/index.html
@@ -104,10 +104,10 @@
         <div class="alert alert_sidebar alert-error home-error-bar" id="reloading-application"></div>
     </div>
     <div class="app-main">
-        <div class="column-left">
+        <div class="column-left"{% if is_iframe %} style="display: none;"{% endif %}>
             {% include "zerver/left_sidebar.html" %}
         </div>
-        <div class="column-middle">
+        <div class="column-middle"{% if is_iframe %} style="margin-right: 0; margin-left: 0;"{% endif %}>
             <div class="column-middle-inner tab-content">
                 <div class="tab-pane active" id="home">
                     <div class="fixed-app" id="floating_recipient_bar">
@@ -142,7 +142,7 @@
                 {% endif %}
             </div><!--/tab-content-->
         </div>
-        <div class="column-right">
+        <div class="column-right"{% if is_iframe %} style="display: none;"{% endif %}>
             {% include "zerver/right_sidebar.html" %}
         </div><!--/right sidebar-->
     </div><!--/row-->
