--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -93,6 +93,7 @@ p.n-margin {
     height: 24px;
 }
 
+
 .top-messages-logo svg circle {
     fill: hsl(0, 0%, 27%);
     stroke: hsl(0, 0%, 27%);
@@ -101,6 +102,10 @@ p.n-margin {
 .top-messages-logo svg path {
     fill: hsl(0, 0%, 100%);
     stroke: hsl(0, 0%, 100%);
+}
+
+.is_iframe .top-messages-logo {
+    display: none;
 }
 
 #unmute_muted_topic_notification {
@@ -174,6 +179,7 @@ p.n-margin {
     height: 40px;
 }
 
+
 #panels {
     -webkit-font-smoothing: antialiased;
 
@@ -216,6 +222,9 @@ p.n-margin {
 
 #panels .alert .buttons .alert-link {
     margin: 0px 5px;
+
+.is_iframe .header {
+    display: none;
 }
 
 .app {
@@ -255,6 +264,11 @@ p.n-margin {
     max-width: 250px;
 }
 
+.is_iframe .column-left,
+.is_iframe .column-right {
+    display: none;
+}
+
 .column-left {
     position: absolute;
     left: 0px;
@@ -292,6 +306,11 @@ p.n-margin {
     margin-right: 250px;
     margin-left: 250px;
     position: relative;
+}
+
+.is_iframe .column-middle {
+    margin-right: 25px;
+    margin-left: 25px;
 }
 
 textarea,
@@ -585,6 +604,10 @@ li.actual-dropdown-menu i {
        in Firefox only, for some reason;
        otherwise it gets a scrollbar */
     overflow: visible;
+}
+
+.is_iframe .message_area_padder {
+    margin-top: 0;
 }
 
 td.pointer {
@@ -1668,6 +1691,10 @@ blockquote p {
     z-index: 99;
 }
 
+.is_iframe #tab_bar_underpadding {
+    display: none;
+}
+
 #navbar-buttons {
     white-space: nowrap;
     margin-left: 15px;
@@ -2067,6 +2094,10 @@ div.floating_recipient {
 
 #floating_recipient_bar {
     top: 50px;
+}
+
+.is_iframe #floating_recipient_bar {
+    display: none;
 }
 
 .message-header-contents {
@@ -2762,6 +2793,14 @@ div.topic_edit_spinner .loading_indicator_spinner {
 
 #home {
     margin-top: 41px;
+}
+
+.is_iframe #home {
+    margin-top: 0;
+}
+
+.message-pane {
+    padding-left: 0.3em;
 }
 
 .screen {
