--- a/templates/zerver/base.html
+++ b/templates/zerver/base.html
@@ -40,7 +40,7 @@
         {% endblock %}
     </head>
 
-    <body>
+    <body class="{% if is_iframe %}is_iframe{% endif %}">
         {% block content %}
         {% endblock %}
     </body>
